@@ -1,54 +1,48 @@
 package com.example.social_media_api.service;
 
+import com.example.social_media_api.dto.friendship.ActionFriendship;
+import com.example.social_media_api.dto.friendship.FriendshipRequestDTO;
+import com.example.social_media_api.dto.message.ChatDTO;
 import com.example.social_media_api.dto.message.MessageDTO;
 import com.example.social_media_api.dto.post.CreatePostDTO;
+import com.example.social_media_api.dto.post.DeletePostDTO;
 import com.example.social_media_api.dto.post.PostDTO;
 import com.example.social_media_api.dto.post.UpdatePostDTO;
 import com.example.social_media_api.dto.user.CreateUserDTO;
-import com.example.social_media_api.enums.FriendshipStatus;
-import com.example.social_media_api.enums.PageSize;
+import com.example.social_media_api.enums.FriendStatus;
+import com.example.social_media_api.enums.SubStatus;
+import com.example.social_media_api.exception.UserNotFoundException;
 import com.example.social_media_api.model.*;
 import com.example.social_media_api.repository.*;
+import com.example.social_media_api.utilities.MapEntityToDTO;
 import com.example.social_media_api.utilities.ServiceUtilities;
-import jakarta.persistence.EntityNotFoundException;
+import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
+import org.springframework.util.CollectionUtils;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Objects;
+import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class SocialMediaServiceImpl implements SocialMediaService {
 
+    static final int PAGE_SIZE = 10;
+
     private final ServiceUtilities serviceUtilities;
+    private final MapEntityToDTO mapEntityToDTO;
 
     private final UserRepository userRepository;
     private final PostImageRepository postImageRepository;
     private final PostRepository postRepository;
-    private final FriendshipRepository friendshipRepository;
     private final SubscriptionRepository subscriptionRepository;
     private final MessageRepository messageRepository;
     private final ModelMapper modelMapper;
-
-    public SocialMediaServiceImpl(ServiceUtilities serviceUtilities,
-                                  UserRepository userRepository,
-                                  PostImageRepository postImageRepository,
-                                  PostRepository postRepository,
-                                  FriendshipRepository friendshipRepository,
-                                  SubscriptionRepository subscriptionRepository,
-                                  MessageRepository messageRepository,
-                                  ModelMapper modelMapper) {
-        this.serviceUtilities = serviceUtilities;
-        this.userRepository = userRepository;
-        this.postImageRepository = postImageRepository;
-        this.postRepository = postRepository;
-        this.friendshipRepository = friendshipRepository;
-        this.subscriptionRepository = subscriptionRepository;
-        this.messageRepository = messageRepository;
-        this.modelMapper = modelMapper;
-    }
 
     @Override
     public void createUser(CreateUserDTO createUserDTO) {
@@ -57,35 +51,35 @@ public class SocialMediaServiceImpl implements SocialMediaService {
     }
 
     @Override
-    public void createPost(Long creatorId, CreatePostDTO createPostDTO, List<MultipartFile> files) {
-        User user = userRepository.findById(creatorId).orElseThrow();
+    public void createPost(CreatePostDTO createPostDTO, List<MultipartFile> files) {
+        User user = userRepository.findById(createPostDTO.getCreatorId()).orElseThrow(UserNotFoundException::new);
         Post post = modelMapper.map(createPostDTO, Post.class);
         post.setUser(user);
         post.setCreatedAt(LocalDateTime.now());
-        postRepository.save(post);
 
-        if (files != null && !files.isEmpty()) {
-            serviceUtilities.saveFiles(files, post, postRepository, postImageRepository);
+        if (!CollectionUtils.isEmpty(files)) {
+            serviceUtilities.saveFiles(files, post);
         }
+
+        postRepository.save(post);
 
     }
 
     @Override
     public Page<PostDTO> getPostByUserId(Long userId, int page) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new EntityNotFoundException("Пользователь с ID " + userId + " не найден"));
+        User user = userRepository.findById(userId).orElseThrow(UserNotFoundException::new);
 
-        Pageable pageable = PageRequest.of(page, PageSize.PAGE_SIZE.getSize(), Sort.by("createdAt").descending());
+        Pageable pageable = PageRequest.of(page, PAGE_SIZE, Sort.by("createdAt").descending());
 
         Page<Post> postsPage = postRepository.findByUser(user, pageable);
 
-        return postsPage.map(serviceUtilities::mapToPostDTO);
+        return postsPage.map(mapEntityToDTO::mapToPostDTO);
 
     }
 
     @Override
     public void updatePost(Long postId, UpdatePostDTO updatePostDTO, List<MultipartFile> addedFiles) {
-        User user = userRepository.findById(1L).orElseThrow();
+        User user = userRepository.findById(updatePostDTO.getUserId()).orElseThrow(UserNotFoundException::new);
         Post post = postRepository.findByUserAndId(user, postId);
 
         post.setTitle(updatePostDTO.getTitle());
@@ -93,7 +87,7 @@ public class SocialMediaServiceImpl implements SocialMediaService {
 
         if (addedFiles != null && !addedFiles.isEmpty()) {
 
-            serviceUtilities.saveFiles(addedFiles, post, postRepository, postImageRepository);
+            serviceUtilities.saveFiles(addedFiles, post);
         }
 
         if (updatePostDTO.getRemovedFileIds() != null && !updatePostDTO.getRemovedFileIds().isEmpty()) {
@@ -113,108 +107,117 @@ public class SocialMediaServiceImpl implements SocialMediaService {
     }
 
     @Override
-    public void deletePost(Long postId) {
-        User user = userRepository.findById(1L).orElseThrow();
-        Post post = postRepository.findByUserAndId(user, postId);
+    public void deletePost(DeletePostDTO deletePostDTO) {
+        User user = userRepository.findById(deletePostDTO.getUserId()).orElseThrow(UserNotFoundException::new);
+        try {
+            Post post = postRepository.findByUserAndId(user, deletePostDTO.getPostId());
 
-        List<PostImage> removedImages = post.getImages();
-        for (PostImage removedImage : removedImages) {
-            serviceUtilities.deleteImageFromDirectory(removedImage.getFileName());
+            List<PostImage> removedImages = post.getImages();
+            for (PostImage removedImage : removedImages) {
+                serviceUtilities.deleteImageFromDirectory(removedImage.getFileName());
+            }
+
+            postRepository.delete(post);
+        } catch (NullPointerException e) {
+            e.printStackTrace();
         }
 
-        postRepository.delete(post);
     }
 
     @Override
-    public void sendFriendshipRequest(Long targetUserId) {
-        User subscriber = userRepository.findById(1L).orElseThrow(); // Получите текущего пользователя (подписчика)
-        User targetUser = userRepository.findById(targetUserId)
-                .orElseThrow(() -> new EntityNotFoundException("User with ID " + targetUserId + " not found"));
+    public void sendFriendshipRequest(FriendshipRequestDTO friendshipRequestDTO) {
+        User subscriber = userRepository.findById(friendshipRequestDTO.getUserId()).orElseThrow(UserNotFoundException::new); // Получите текущего пользователя (подписчика)
+        User targetUser = userRepository.findById(friendshipRequestDTO.getTargetUserId()).orElseThrow(UserNotFoundException::new);
 
         if (subscriber.getId().equals(targetUser.getId())) {
-            throw new IllegalArgumentException("Вы не можете подписаться на себя");
+            throw new IllegalArgumentException();
         }
 
         Subscription subscription = new Subscription();
-        Friendship friendship = new Friendship();
 
         subscription.setSubscriber(subscriber);
         subscription.setTargetUser(targetUser);
         subscription.setCreatedAt(LocalDateTime.now());
-
-        friendship.setUser(subscriber);
-        friendship.setFriend(targetUser);
-        friendship.setStatus(FriendshipStatus.PENDING); // Устанавливаем статус "pending"
-        friendship.setCreatedAt(LocalDateTime.now());
+        subscription.setFriendStatus(FriendStatus.UNACCEPTED);
+        subscription.setSubStatus(SubStatus.USER1);
 
         subscriptionRepository.save(subscription);
-        friendshipRepository.save(friendship);
+
     }
 
     @Override
-    public void acceptFriendshipRequest(Long subscriberId) {
-        User user = userRepository.findById(2L).orElseThrow(); // Получите текущего пользователя (подписчика)
-        Friendship friendship = friendshipRepository.findByUserIdAndFriendId(subscriberId, user.getId());
-        if (friendship == null) {
-            throw new NullPointerException("У вас нет ожидающих подтверждения запросов на дружбу");
+    public void acceptFriendshipRequest(ActionFriendship actionFriendship) {
+
+        Subscription subscription = subscriptionRepository.findBySubscriberIdAndTargetUserIdAndFriendStatus(
+                actionFriendship.getTargetUserId(), actionFriendship.getUserId(), FriendStatus.UNACCEPTED);
+
+        if (subscription == null) {
+            throw new NullPointerException();
         }
-        friendship.setStatus(FriendshipStatus.ACCEPTED);
-        friendship.setCreatedAt(LocalDateTime.now());
 
-        User subscriber = userRepository.findById(subscriberId).orElseThrow();
-
-        Subscription subscription = new Subscription();
-        subscription.setSubscriber(user);
-        subscription.setTargetUser(subscriber);
         subscription.setCreatedAt(LocalDateTime.now());
+        subscription.setFriendStatus(FriendStatus.ACCEPTED);
+        subscription.setSubStatus(SubStatus.BOTH);
 
         subscriptionRepository.save(subscription);
-        friendshipRepository.save(friendship);
     }
 
+
     @Override
-    public void declineFriendshipRequest(Long subscriberId) {
-        User user = userRepository.findById(2L).orElseThrow(); // Получите текущего пользователя (подписчика)
-        Friendship friendship = friendshipRepository.findByUserIdAndFriendId(subscriberId, user.getId());
-        if (friendship == null) {
-            throw new NullPointerException("У вас нет ожидающих непринятия запросов на дружбу");
+    public void declineFriendshipRequest(ActionFriendship actionFriendship) {
+
+        Subscription subscription = subscriptionRepository.findBySubscriberIdAndTargetUserIdAndFriendStatus(
+                actionFriendship.getTargetUserId(), actionFriendship.getUserId(), FriendStatus.UNACCEPTED);
+
+        if (subscription == null) {
+            throw new NullPointerException();
         }
-        friendshipRepository.delete(friendship);
+
     }
 
     @Override
-    public void removeFriend(Long friendId) {
-        User user = userRepository.findById(2L).orElseThrow(); // Получите текущего пользователя (подписчика)
-        Friendship friendship = friendshipRepository.findByUserIdAndFriendId(friendId, user.getId());
-        if (friendship == null) {
-            throw new NullPointerException("У вас нет ожидающих непринятия запросов на дружбу");
-        } else if (friendship.getStatus() != FriendshipStatus.ACCEPTED) {
-            throw new IllegalArgumentException("У вас нет такого друга");
+    public void removeFriend(ActionFriendship actionFriendship) {
+
+        Subscription subscription = subscriptionRepository.findSubscriptionsWithFriendStatus(
+                actionFriendship.getUserId(), actionFriendship.getTargetUserId(), FriendStatus.ACCEPTED);
+
+        if (subscription == null) {
+            throw new NullPointerException();
         }
-        subscriptionRepository.delete(subscriptionRepository.findBySubscriberIdAndTargetUserId(user.getId(), friendId));
-        friendshipRepository.delete(friendship);
+
+        subscription.setCreatedAt(LocalDateTime.now());
+        subscription.setFriendStatus(FriendStatus.UNACCEPTED);
+
+        if (Objects.equals(subscription.getSubscriber().getId(), actionFriendship.getUserId())) {
+            subscription.setSubStatus(SubStatus.USER2);
+        } else {
+            subscription.setSubStatus(SubStatus.USER1);
+        }
+
+        subscriptionRepository.save(subscription);
+
     }
 
     @Override
-    public MessageDTO sendMessage(Long senderId, Long receiverId, String content) {
+    public void sendMessage(MessageDTO messageDTO) {
 
-        List<User> users = serviceUtilities.checkUsersForMessaging(senderId, receiverId, userRepository);
+        List<User> users = serviceUtilities.checkUsersForMessaging(messageDTO.getSenderId(), messageDTO.getReceiverId());
 
         Message message = new Message();
         message.setSender(users.get(0));
         message.setReceiver(users.get(1));
-        message.setContent(content);
+        message.setContent(messageDTO.getContent());
         message.setSentAt(LocalDateTime.now());
 
         messageRepository.save(message);
 
-        return modelMapper.map(message, MessageDTO.class);
+        modelMapper.map(message, MessageDTO.class);
     }
 
     @Override
-    public List<MessageDTO> getChat(Long user1Id, Long user2Id) {
+    public List<MessageDTO> getChat(ChatDTO chatDTO) {
 
-        List<User> users = serviceUtilities.checkUsersForMessaging(user1Id, user2Id, userRepository);
+        List<User> users = serviceUtilities.checkUsersForMessaging(chatDTO.getUser1Id(), chatDTO.getUser2Id());
 
         List<Message> chatMessages = messageRepository.findBySenderAndReceiverOrReceiverAndSenderOrderBySentAtDesc(users.get(0), users.get(1), users.get(0), users.get(1));
 
@@ -225,20 +228,21 @@ public class SocialMediaServiceImpl implements SocialMediaService {
 
     @Override
     public Page<PostDTO> getUserActivityFeed(Long userId, int page) {
-        Pageable pageable = PageRequest.of(page, PageSize.PAGE_SIZE.getSize(), Sort.by("createdAt").descending());
+        Pageable pageable = PageRequest.of(page, PAGE_SIZE, Sort.by("createdAt").descending());
 
-        List<Subscription> subscriptions = subscriptionRepository.findBySubscriberId(userId);
+        List<Subscription> subscriptions = subscriptionRepository.findSubscriptionsBySubscriberIdAndSubscriptionStatusIn(userId, SubStatus.USER1, SubStatus.BOTH);
 
         List<Long> targetUserIds = subscriptions.stream()
                 .map(Subscription::getTargetUser)
                 .map(User::getId)
-                .toList();
+                .collect(Collectors.toList());
 
         List<Post> activityFeedPosts = postRepository.findByUserIdIn(targetUserIds);
 
+
         List<PostDTO> postDTOList = activityFeedPosts.stream()
-                .map(serviceUtilities::mapToPostDTO)
-                .toList();
+                .map(mapEntityToDTO::mapToPostDTO)
+                .collect(Collectors.toList());
 
         return new PageImpl<>(postDTOList, pageable, activityFeedPosts.size());
     }
